recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
	if (l==Nil){
		return false
	} else {
		if (l.head==v){
			return true
		}
	}
			return isMember(l.tail,v)
	

}

def occurences(l:List[Int], v:Int): Int = {
	if (l==Nil){
		return 0
	}
	else { 
		if (l==v){
			return v
		}	
	}
	if (isMember(l.tail,l.head){
		return l.head
	}
	return (l,v)
}
